<resources>
    <string name="app_name">Shopify</string>
    <string name="shopify">Shopify</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="prashant_manna_all_rights_reserved">© Prashant Manna. All rights reserved</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="back_press">Back Press</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email ID</string>
    <string name="enter_password_new">Enter Password</string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="register">Register</string>
    <string name="verify">Verify</string>
</resources>